Fix pre node not overflowing - This was a bug in existing implementation too

--- a/src/sql/workbench/parts/notebook/cellViews/media/markdown.css
+++ b/src/sql/workbench/parts/notebook/cellViews/media/markdown.css
@@ -167,11 +167,11 @@
 
 .notebook-preview code {
 	font-family: Menlo, Monaco, Consolas, "Droid Sans Mono", "Courier New", monospace, "Droid Sans Fallback";
-	font-size: 14px;
+	font-size: 12px;
 	line-height: 19px;
 }
 
-.notebook-preview .wordWrap pre {
+.notebook-preview pre {
 	white-space: pre-wrap;
 }
 
